Fix About page view on iOS

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,5 +1,5 @@
 .about {
-  height: 100vh;
+  // height: 100vh;
   background: linear-gradient(
       to right,
       rgba($primary-color, 0.9),
